--- a/AJAXCRUD/src/main/resources/application.properties
+++ b/AJAXCRUD/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
 debug=true 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ajaxtest?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/ajaxtest?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 
 
 spring.datasource.username=root
